--- a/book_eu/05.md
+++ b/book_eu/05.md
@@ -1,9 +1,10 @@
-#Motak
+# Motak
 
 Klaseek objektuei orientatutako programazioa izeneko teknika aplikatzeko aukera ematen digute. Arazo konplexuak konpontzeko beste estrategia bat da.
 Funtzioekin, arazo bat arazo txikietan banatzen dugu. Aldiz, objektuetara bideratutako programazioarekin, arazoa klasetan banatzen saiatzen gara. Baina nola? Arazoaren zati den guztia irudikatuz, klaseak erabiliz.
 
 Demagun Mario Kart bezalako lasterketa-joko baten programa egin behar dugula. Objektuetara bideratutako programazioa erabiliz, jokoaren elementuak honako klase hauekin irudika ditzakegu:
+
 - Pertsonaia, bere izenarekin eta beste ezaugarri batzuekin.
 - Autoa, bere ezaugarri hauekin: abiadura, erresistentzia, azelerazio-funtzioak, etab.
 - Zirkuitua, luzerarekin, tunelekin, sariekin eta abarrekin.
@@ -11,6 +12,7 @@ Demagun Mario Kart bezalako lasterketa-joko baten programa egin behar dugula. Ob
 ## Nola sortu klaseak
 
 Klase bat programazio-egitura bat da, entitate bat bere propietate eta metodoekin irudikatzeko aukera ematen diguna. Hau da, klase bat:
+
 - Propietateak ditu: berezko aldagaiak.
 - Gauzak egiten ditu: funtzioak.
 
@@ -21,25 +23,30 @@ class Katua:
 def maulla (self):
 print ("Miau")
 ```
+
 Ikus daitekeenez, klasea definitzeko, `class 'hitza erabiliko dugu, eta, ondoren, klasearen izena, lehenengo letra maiuskulaz. Bloke horren barruan doan guztia ikasgelaren parte izango da.
 
 Bestalde, kontuan izan behar duzu** guztiek** klase baten funtzioek parametro `self 'berberak izan behar dituztela, nahiz eta ez erabili. Parametro hori klaseari berari dagokio, eta haren propietateei eta funtzioei erreferentzia egiteko erabiltzen da, orain ikusiko dugun bezala.
 
 ## Klasea vs instantzia
+
 Klasea katuaren definizioa besterik ez da. Baina gure programan katu bat sortzeko, instantzia bat sortu behar dugu. Honela egiten da:
 
 ```python
 gato = Katua ()
 gato.maulla ()
 ```
+
 Pantailan honako hauek ikusiko ditugu:
 
 ```console
 Miau
 ```
+
 Instantzia objektu zehatz bat da. Klasea definizioa baino ez da: katu batek izena eta maulla ditu. Instantzia objektu zehatz bat da: Neko.
 
 5.0 ariketa
+
 Idatzi lo egiteko, jateko eta agurtzeko metodoak dituen Pertsona izeneko klase bat definituko duen programa bat. Metodo bakoitzaren barruan testuren bat atera behar duzu kontsola bidez. Sortu ikasgelako instantzia bat eta deitu metodo desberdinetara.
 
 ```python
@@ -59,6 +66,7 @@ pertsona.lo egitea ()
 pertsona.jatea ()
 pertsona.agurtu ()
 ```
+
 Emaitza:
 
 ```console
@@ -68,6 +76,7 @@ Kaixo, zer moduz?
 ```
 
 ## Eraikuntza-funtzioa
+
 Orain dela gutxi definitu dugun katu hori. Izen bat emango diogu. Gainera, funtzio berezi bat sortuko dugu, `__init___ 'izenekoa.
 *** eraikuntza-funtzioa* esaten zaio. Funtzio hau klaseko objektu bat sortzen denean deitzen da, eta, beraz, klasearen propietateei ekiteko lekurik egokiena da:
 
@@ -89,6 +98,7 @@ gato.maulla ()
 Beste katu bat = Katua ("Txeto")
 beste katea.maulla ()
 ```
+
 Eta kasu honetan ikusiko dugu:
 
 ```console
@@ -97,6 +107,7 @@ Miau, Cheto naiz.
 ```
 
 5.1 ariketa
+
 Idatzi programa bat Kaixo izeneko klase bat definitzeko. Klaseak funtzio eraikitzaile bat izan behar du, `osasuna 'izeneko propietate batekin. Jabetza hori "kaixo" hitzarekin hasiko da.
 Horrez gain, `decirHola«izeneko metodo bat erantsiko duzu, eta, pantailan, osasunaren edukia erakutsiko du.
 
@@ -110,6 +121,7 @@ print (self.agurra)
 hola = Hola ()
 hola.decirHola ()
 ```
+
 Emaitza:
 
 ```console
@@ -125,6 +137,7 @@ class Cachorro (Katua):
 def ronea (self):
 print ("Purrrr")
 ```
+
 Orain honako hau egin dezakegu. Txakurkume objektu bat sortzea, Katu klasearen propietate berberekin. Automatikoki jarauntsiko ditu jabetza (izena) eta metodo hau:
 
 ```python
@@ -132,13 +145,16 @@ katutxoa = Txakurkumea ("Lucifur")
 gatito.ronronea ()
 gatito.maulla ()
 ```
+
 Honela ikusiko litzateke:
 
 ```console
 Purrrr
 Miau, Lucifur naiz.
 ```
+
 ## super ()
+
 Azpiklase bat edo klase bat beste baten alaba sortzen duzunean, heredatzen duzun ikasgelatik `super () "funtzioa erabil dezakezu oinordetzan hartutako klasearen funtzioei deitzeko.
 Adibidez, aurreko kasuan, `Cachorroere 'azpimailatik berezko eraikitzaile bat gehi genezake, eta `Gatoere' superklasearen eraikitzaileari ere dei diezaiokegu:
 
@@ -153,6 +169,7 @@ print ("Purrrr")
 ```
 
 5.2 ariketa
+
 Idatz ezazu `Comidaa 'klasea definituko duen programa bat, izendapenaren atributuarekin. Sor ezazu `Frutak 'izeneko azpiklase bat, `Comidak `izena eta bitaminak `jasotzen dituen eraikitzaile batekin, eta `infoagne' izeneko metodo bat, bere informazio guztia itzultzen duena.
 Sortu instantzia bat `Frutaa 'klasea probatzeko.
 
@@ -174,6 +191,7 @@ postre = Fruta ("Kiwi", [A "," C "])
 print (postre.info ()
 
 ```
+
 Emaitza:
 
 ```console
@@ -190,6 +208,7 @@ objektua. IzenaJabetza
 ```
 
 Katuak izena izeneko propietate bat du.
+
 ```python
 miGato = Katua ("Pixi")
 print (miGato.nombre) #Pixi
@@ -201,6 +220,7 @@ Propietate bat hain zuzenean eskuratzea ez dago gaizki, baina ni bezalako progra
 Bestela esanda, programatzaileek "kutxa beltzak" diruditen klaseak sortzen saiatu behar dute. Izena bezalako propietateen kasuan, Python-en metodo hauek gehitu daitezke:
 
 Izenaren jabetzaren balioa itzultzeko metodo bat, "getter" ere esaten zaiona:
+
 ```python
 @property
 def izena ():
@@ -208,6 +228,7 @@ return self._izena
 ```
 
 Izenaren balioa aldatu ahal izateko metodo bat, "setter" ere esaten zaiona:
+
 ```python
 @nombre.setter
 def izena (izena):
@@ -216,6 +237,7 @@ self._izena = izena
 ```
 
 Klasea honela geratuko litzateke:
+
 ```python
 class Katua:
 def __init__ (self, izena):
@@ -233,8 +255,10 @@ self._izena = izena
 def maulla (self):
 print ("Miau, naiz", self.izena)
 ```
+
 Ikus ezazu propietatea `izena`dela orain. Jabetza hori "pribatua" dela adierazteko modu bat da, eta ez litzatekeela ikasgelatik kanpo eskuratu behar.
 Orain, "Izena" izeneko klasea erabiltzen dugunean, funtzio berri horien bidez egingo da.
+
 ```python
 miGato = Katua ("Pixi")
 print (miGato.nombre) #deitu `def izena () metodora:
@@ -243,6 +267,7 @@ miGato.maulla () #Miau, Pixel naiz
 ```
 
 5.3 ariketa
+
 Idatz ezazu `Vehiculoere 'klasea definituko duen programa bat, "matrikula" atributuarekin, get/set metodoekin eta "arrancar«" izeneko beste metodo batekin. Sortu "Zortzi" izeneko azpiklase bat, `Vehicullo 'klasea zabaltzeko, eta eraikitzaile batek `matrikulak, modeloak eta koloreak' jasoko ditu, eta informazio guztia itzultzeko funtzio bat izango du. Sortu instantzia bat "Zortzi" klasea probatzeko.
 
 ```python
@@ -274,6 +299,7 @@ martxan jartzeko kotxea ()
 print (kotxe.info ())
 
 ```
+
 Emaitza:
 
 ```console
@@ -282,10 +308,12 @@ Emaitza:
 ```
 
 Zer abantaila izan dezake kapsularatzeak?
+
 Funtsean, "kanpotik" ezin da ikasgela kontrolik gabe manipulatu. Horregatik da kutxa beltz bat bezalakoa, bideo-kontsola bat bezalakoa. Joko bat jokatzeko eskuz ireki eta soldatu beharko bazenu, ziurrenik kontsola kargatuko zenuke. Horregatik, aparatuak kutxa beltz gisa diseinatzen dira, kanpotik manipulatzeko aukera baino ez dizute ematen.
 Katu klasearen kasuan, ez dugu uzten izena zuzenean aldatzen. "Setter" funtzioaren bidez, esleitu nahi den izena zuzena dela kontrola dezakegu.
 
 ## Beste mota batzuk dituzten klaseak
+
 Objektuetara bideratutako programazioarekin, klaseen bidez mundu errealeko gauzak irudikatzen saiatzen gara. Eta klase horiek bata bestearekin lotuta egon daitezke.
 
 Adibidez, ikastetxe batek gelak izan ditzake, gela batek ikasleak eta irakasleak izan ditzake, etab.
@@ -315,9 +343,11 @@ ikasgela.meteIkaslea (1. ikaslea)
 ikasgela.meteIkaslea (2. ikaslea)
 aula.pasaLista ()
 ```
+
 Diseinuak behar bezain konplexuak izan daitezke behar duguna irudikatzeko.
 
 5.4 ariketa
+
 Idatz ezazu programa bat, `Piloto«atributua» eta «get/set» funtzioak dituena. Era berean, sor ezazu `Aeroplana» izeneko klase bat, eredu, pilotu eta kopilotu atributuarekin, get/set funtzioekin modelorako, eta beste metodo batekin, «volard» izenekoa. Sortu instantzia bat bi klaseak probatzeko.
 
 ```python
@@ -357,12 +387,15 @@ avioneta = Aireplanoa ("AirBluff 727", pilotu1, pilotu2)
 print (avioneta.volar ())
 
 ```
+
 Emaitza:
 
 ```console
 Hegan AirBluff 727 Han Solo Murdockekin
 ```
+
 ## Metodo estatikoak
+
 Normalean, klase bat erabili ahal izateko, haren instantzia bat sortzen dugu beti, aurreko adibidean egiten genuen bezala:
 
 ```python
@@ -419,6 +452,7 @@ Zergatik egin klase bat horrelako funtzio batekin eta ez zuzenean funtzio bateki
 ## Proposatutako ariketak
 
 5.0 ariketa
+
 Idatzi `Instrumento 'izeneko klase bat definitzen duen programa bat. Eraikitzaileak parametro hauek izan behar ditu, hurrenez hurren: `izena 'eta `mota'. Gainera, `ukitu 'izeneko funtzio bat gehitu behar duzu, mezu bat eta beste dei bat aterako dituena, atributuen informazioa duen testu bat itzultzeko.
 Sortu gelako instantzia bat eta deitu bere funtzioetara.
 
@@ -438,6 +472,7 @@ miGitarra = Instrumentua ("Gitarra", "soka")
 miGuitarra.jo ()
 print (miGuitarra.info ())
 
+
 ```
 Emaitza:
 
@@ -447,6 +482,7 @@ Hari-gitarra
 ```
 
 5.1 ariketa
+
 Idatz ezazu programa bat, `NombreFormateado" izeneko klase bat definituko duena, eta, bertan, etxegile bat agertuko da, eta `izena 'eta `abizena' izeneko funtzio bat ere izango du. Sortu zure ustez egokiak diren eginkizun osagarriak.
 
 ```python
@@ -470,6 +506,7 @@ return cadena [1: len (katea)] .lower ()
 formateatzailea = Formateatua ("JUAN", "PÉREZ")
 print (formateatzailea.formatear ())
 ```
+
 Emaitza:
 
 ```console
@@ -477,6 +514,7 @@ Juan Pérez
 ```
 
 5.2 ariketa
+
 Idatz ezazu programa bat `Sumador, 'izeneko klase bat definitzeko, eta bi zenbakirekin idatzi. Bientzako get eta set funtzioak barne hartzen ditu, eta balio negatiboa esleitzen saiatzen bazaizkie 0 esleitzea kontrolatu behar duzu. Gainera, bi zenbakien batura itzuliko duen "batuketa" funtzioa izango dute.
 
 ```python
@@ -516,6 +554,7 @@ sumador.valor1 = 600
 sumador.valor2 = 66
 print (batuketa)
 ```
+
 Emaitza:
 
 ```console
@@ -524,6 +563,7 @@ Emaitza:
 ```
 
 5.3 ariketa
+
 Sortu programa bat `Monedaa 'izeneko klase batekin. Klaseak eraikitzaile huts bat izan behar du, eta funtzio bakar bat, `tirarin 'izenekoa. Horren emaitza "aurpegiaren" edo "gurutzearen" artean ausaz aukeratutako* string* bat izan behar da. Sortu ikasgelako instantzia bat probatzeko.
 
 ```python
@@ -544,6 +584,7 @@ moneta = Moneta ()
 for i in range (10):
 print (moneda.tirar ())
 ```
+
 Emaitza:
 
 ```console
@@ -554,10 +595,14 @@ gurutzea
 gurutzea
 ...
 ```
+
 5.4 ariketa
+
 Sortu programa bat "N aurpegiko dado baten portaera simulatzeko" Datuak "izeneko klase batekin. Sortu ikasgelako instantzia bat probatzeko.
-- `def __init__ 'eraikitzailea (self, aldeak, admitiCero = False): `lapur' atributuarekin: aurpegi-kopurua gordetzen duen atributua eta `￮ zeroOnartu = Faltsutzea: emandakoak 0 balioa itzul dezakeen esaten digun atributua. Lehenetsita, balio du:
-- setter `def lados (self, lados) Parametrodun setter funtzioa. Atributua ezartzen du.
+
+- `def __init__ 'eraikitzailea (self, aldeak, admitiCero = False): `lapur' atributuarekin: aurpegi-kopurua gordetzen duen atributua eta
+- `zeroOnartu`= Faltsutzea: emandakoak 0 balioa itzul dezakeen esaten digun atributua. Lehenetsita, balio du:
+- setter `def lados (self, lados)` Parametrodun setter funtzioa. Atributua ezartzen du.
 Zero (self, aldeak, onargarriaZero): parametrodun funtzioa, bi atributuak ezartzen ditu.
 Funtzio horrek dadoaren jaurtiketa simulatzen du eta emaitza bat itzultzen du. Kontuan hartu behar duzu "Onartu zeroa" atributua.
 Sor itzazu 6 aurpegiko dado bat, 10 aurpegiko dado bat eta zeroak ahalbidetzen dituen 20 aurpegiko dado bat sortzen duten instantziak, eta egizu bakoitzetik 100 jaurtiketa:
@@ -603,6 +648,7 @@ for i in range (10):
 print (dado.tirar ())
 
 ```
+
 Emaitza:
 
 ```console
@@ -613,12 +659,17 @@ Emaitza:
 3
 ...
 ```
+
 5.5 ariketa
+
 Sortu bi motatako programa bat:
+
 1- `Jugadora 'klasea, izen, postu eta dortsal ezaugarriak dituena. Parametro horiek guztiak dituen eraikitzaile bat ere badu, eta ezaugarri guztiak itzuliko dituen `informe 'izeneko funtzio bat.
 2 - Mota `Ekipola, izena, fundazioa, aurrekontua eta jokalari motako instantziak gordetzeko zerrenda. Honako ezaugarri hauek dituen eraikitzaile bat izan behar du: "izena", "fundazioa", "aurrekontua", "get/seta", "informazioa" funtzioa eta beste bi funtzio:
+
 - `def ficha (self, jugador )», zerrendara jokalariak gehitzeko.
 - `def demostratu 'Jokalariak (self), jokalarien datu guztiak jasotzen dituen kate bat itzultzeko
+
 Gainera, gehitu bi jokalari eta talde bat sortzeko beharrezkoa den kodea, eta horri jokalariak gehitu eta erakutsiko dizkiozu.
 
 ```python
@@ -657,14 +708,18 @@ taldea. FitxatuJokalaria (jokalaria 2)
 taldea.erakutsiJokalariak ()
 
 ```
+
 Emaitza:
 
 ```console
 Maradona Aurrelaria 10
 Beckenbauer Defentsa 4
 ```
+
 5.6 ariketa
+
 Sortu zenbait klase barne hartzen dituen programa bat.
+
 1 - Mota `Dispositiboa: "izena", "marka" eta "balioa" atributuak ditu. Eraikitzaile bat atributuak, set eta get eta `toString 'funtzio bat erabiltzen, atributuak erakutsiz.
 2 - Mota `Movilere: `Dispositivoere 'motako azpiklasea da, eta "numeroa" atributua gehitu behar zaio. Sortu eraikitzailea eta `def toString (self) 'metodoa, superklasekoak aprobetxatuz. Gehitu "def llamar (self, numero)" funtzioa. Atera dezala pantailatik kate bat "numero deituz" esanez.
 3 - Mota `Ordenadorea: `Dispositivoere 'azpiklasea da, "prozesadorea" atributua gehitu behar zaio. Sortu eraikitzailea eta "def toString (self)" funtzioa superklasekoak aprobetxatuz
@@ -731,6 +786,7 @@ telefonoa = Mugikorra ("Chanmhung", 434.4, 665745345)
 print ("Ordenagailua:", ordenadorea. ToString ())
 print ("Telefonoa:", telefonoa.toString ())
 ```
+
 Emaitza:
 
 ```console
@@ -739,14 +795,18 @@ Chanmhung telefonoa 434.4 665745345
 ```
 
 5.7 ariketa
+
 Txanogorritxo proiektua sortuko dugu, non protagonistak janari saski bat kudeatzen duen. Bazkaria mota askotakoa izango da. Hauek dira egin beharreko klaseak:
+
 1 - Mota `Komidaa: "izena" eta "pisua" atributuak ditu. Eraikitzaile bat atributuak, set eta get eta `toString 'funtzio bat erabiltzen, atributuak erakutsiz.
 2 - Mota `Futua: `Komidaa 'motako azpiklasea da, eta `bitamina' atributua gehitu behar zaio. Sortu eraikitzailea eta `toString 'funtzioa superklasekoak aprobetxatuz.
 3 - Mota `Karamela: `Komidaa 'azpiklasea da, eta `kaloria' atributua gehitu behar zaio. Sortu eraikitzailea eta funciñon `toStringere 'delakoa, superklasekoak aprobetxatuz.
 4 - Mota `Kestak, `elikadura 'izeneko atributua du, eta janari-motako elementu-arrai bat da (`Futua`Carameloa). Eraikitzailean hasten da. Hiru funtzio ditu:
-- `def meterOtordua (self, jana)
-- `def pesoTotal (self) "-k saskiko janariaren guztizko pisua itzultzen du.
-- `def toString (self )» saskiko janari guztia erakusteko.
+
+- `def meterOtordua (self, jana)`
+- `def pesoTotal (self) "-k saskiko janariaren guztizko pisua itzultzen du.`
+- `def toString (self )» saskiko janari guztia erakusteko.``
+
 Gainera, erantsi behar den kodea instantzia hauek sortzeko: `Fruta, `Carameloa, eta erantsi `Cestaa.
 
 ```python
@@ -842,6 +902,7 @@ print ("Saski-edukia:", saskia.toString ())
 print ("Pisua guztira:", zesta.pisua guztira ())
 
 ```
+
 Emaitza:
 
 ```console
