--- a/book_eu/06.md
+++ b/book_eu/06.md
@@ -1,10 +1,14 @@
-#Salbuespenak
+# Salbuespenak
+
 Baliteke dagoeneko programazioan bikaina izatea. Baina, hala ere, zure programek huts egiten jarrai dezakete, gauza batzuk zure programaren kontroletik kanpo daudelako eta zure programak funtzionatzeari uzten diolako.
+
 Adibidez, zure programak erabiltzaileak zenbaki bat idaztea espero badu, baina erabiltzaileak letrak idazten baditu edo ezer idazten ez badu, zure programak huts egingo du.
 Zure programak fitxategi bat irakurri behar badu, baina fitxategi hori existitzen ez bada, zure programak huts egingo du.
 Zure programak sarera konektatu behar badu, baina zure ordenagailua konektatuta ez badago, zure programak huts egingo du.
 Ikus dezakezunez, egoera batzuetan programak ezin du kontrolik izan. Zorionez, badugu mekanismo bat aukera ematen diguna saio horietako bat gertatzen bada gure programak huts egin ez dezan eta besterik gabe amai dadin. Eta mekanismo hori salbuespenak dira.
+
 ## Salbuespenak Python-en
+
 Adibidez, demagun honako programa oso sinple bat dugula, erabiltzaileari zenbaki bat eskatu eta biderketa bat egiten duena:
 
 ```python
@@ -13,7 +17,9 @@ balioa = int (balioa)
 karratua = balioa* balioa
 print ("Karratua da:", karratua)
 ```
+
 Erabiltzaileak behar ez duena sartzen badu, honako hau ikusiko dugu:
+
 ```console
 Sartu zenbaki bat: x
 Traceback (most recent call last):
@@ -21,6 +27,7 @@ File "saltaexcepcion.py", line 2, in < module>
 balioa = int (balioa)
 ValueError: invalid literal for int () with base 10: 'x'
 ```
+
 Salbuespen baten bidez, programak huts egitea ekidin dezakegu, eta gutxienez erabiltzaileari errore-mezu bat erakutsi. Salbuespena hizkuntzaren egitura bat gehiago da, eta forma hau du:
 
 ```python
@@ -42,6 +49,7 @@ print ("Karratua da:", karratua)
 salbuespen:
 print ("Errorea datua bihurtzean!")
 ```
+
 Orain, datu oker bat sartuz gero, honako hau ikusiko dugu:
 
 ```console
@@ -53,11 +61,13 @@ Halaber, programa hobetu ahal izango litzateke, balioa berriro eskatzeko eta ez 
 
 Errore motaren araberako salbuespen espezifikoak daude, eta errore-mezu espezifikoagoa erakusteko erabil daitezke.
 
-#Fitxategiak maneiatzea
+# Fitxategiak maneiatzea
+
 Orain arte datu gutxi erabili ditugu, erabiltzaileak pantaila bidez idazten duena edo aldagaietan daukaguna. Baina datu kopuru handiagoak erabili nahi baditugu, fitxategietan irakurri eta idatz dezakegu.
 Era guztietako fitxategiak daude: testua, multimedia (musika, bideoa) eta fitxategi bitarrak. Horiek guztiak programa batetik erabil daitezke. Sarrera gisa, ikus dezagun nola erabil ditzakegun testu-fitxategiak.
 
 ## Fitxategien irakurketa
+
 Fitxategi bat irakurri ahal izateko, alde batetik fitxategi hori egon behar da, gero ireki eta irakurri ahal izango dugu.
 Kode honetan, programaren leku berean dagoen fitxategi bat irakurtzen da:
 
@@ -67,10 +77,13 @@ edukia = fichero.read ()
 print (edukia)
 fichero.close ()
 ```
+
 Kontuan hartzekoak:
+
 - Fitxategia irakurtzeko, lehenik eta behin ireki egin behar da, honako honekin:
 - Fitxategia irekitzean, haren izena adierazi behar da, eta, beste direktorio batean badago, harako bidea. Fitxatzeko karpetan egonez gero, hau izango litzateke bidea: `fichero/texto.txt`.
 - "r" parametroak adierazten du fitxategia irakurtzeko moduan bakarrik irakurtzen dugula.
+
 Testu-fitxategia horrelako zerbait izan liteke, eta programak hori bera erakutsiko luke pantailan.
 
 ```console
@@ -79,8 +92,11 @@ hainbat lerrokoa
 Eta irakur daiteke
 oso erraz
 ```
+
 ## Lerroz lerro irakurtzen?
+
 Aurreko adibidean, bat-batean irakurri dugu fitxategiaren eduki osoa, testu-aldagai batean gordeta. Baina batzuetan, baliteke online fitxategia irakurri nahi izatea. Horretarako, honako funtzio hau erabili behar dugu:
+
 ```python
 fitxategia = open ("texto.txt", "r")
 lineak = fichero.readline ()
@@ -91,10 +107,13 @@ fichero.close ()
 ```
 
 ## JSON fitxategiak
+
 Aurrekoa bezalako testu-fitxategi sinpleek informazioa izan dezakete, baina ez dira programa baterako oso datu erabilgarriak. Programa batek erraz manipulatu ditzakeen datuak irakurri edo gorde nahi baditugu, formatu jakin bat erabiltzea komeni da.
 Programazioko formatu ezagunenetako bat JSON formatua da. Python-en hiztegi-egituren antza duen formatua da. Hizkuntzarenak bezalako zerrendak irudikatzeko aukera ere badu.
+
 Hurrengo edukia JSON formatuan dago. Hainbat objektu dituen zerrenda da.
 Erreparatzen badiozu, JSON* motako objektuak Python-eko hiztegien berdinak dira!*
+
 ```python
 [
 {"id": 66, "izena": "Ada"},
@@ -102,10 +121,12 @@ Erreparatzen badiozu, JSON* motako objektuak Python-eko hiztegien berdinak dira!
 {"id": 4, "izena": "Bug"}
 ]
 ```
+
 Formatu horren alde ona da gure Python programara erraz inporta daitekeela, betiere zuzena bada, noski.
 
 Eduki hori irakurri eta datu horiek hiztegi zerrenda bihurtzeko, `json, 'liburu-denda erabiliko dugu.
 Fitxategi horren edukia automatikoki kargatu ahal izango dugu aldagai batean. Hortik aurrera, eduki hori guztia zerrenda gisa erabili ahal izango dugu, non elementu bakoitza hiztegi bat den!:
+
 ```python
 import json
 
@@ -125,8 +146,11 @@ Ada
 Neko
 Bug
 ```
+
 ## Fitxategien eskritura
+
 Fitxategiak idazteko, prozesua antzekoa da, baina bi gauza egin behar ditugu:
+
 - Fitxategia idazkera moduan irekitzea.
 - Erabili `writee 'funtzioa edukia idazteko.
 
@@ -166,6 +190,7 @@ Gehitu beste lerro bat
 ```
 
 ## Fitxategi batean idatzi json
+
 JSON formatuko fitxategi baten kasuan, kezkatzekoa da idazteko unean gure datuak testu bihurtzea.
 Zorionez, automatikoki egiten duen funtzio bat dago: `json.dumps ()
 
@@ -186,7 +211,9 @@ fitxategia = open ("texto.json", "w")
 fichero.write (json.dumps (edukia))
 fichero.close ()
 ```
-#Liburu-dendak
+
+# Liburutegiak
+
 Programak gero eta konplexuagoak diren heinean, litekeena da funtzio asko definitu behar izatea, edo diseinua klaseetan bereizi behar izatea, etab.
 Dena fitxategi berean eduki dezakegun arren, ez litzateke gure kodea antolatzeko modurik onena. Egokiena da klase bakoitza bere fitxategian bereiztea, eta funtzio edo funtzio-multzo bakoitza bere fitxategian.
 
@@ -214,7 +241,9 @@ balioespena 2 = 10
 emaitza = mates.batu (1. balorazioa, 2. balorazioa)
 print (emaitza) # 15
 ```
+
 6.0 ariketa
+
 Aurreko ekitaldi batean, pasahitzen sorgailu bat egitea proposatu zen. Erabili kode bera, baina sinetsi fitxategi baten barruan. Sortu beste fitxategi bat kode hori inportatzeko eta erabiltzeko.
 
 Generar.ete fitxategia:
@@ -237,7 +266,9 @@ password = password + caracter
 
 return password
 ```
+
 Eta 1 ETE fitxategian erabiltzen dugu:
+
 ```python
 inport sortu
 
@@ -245,6 +276,7 @@ password = generar.crearPassword (8)
 
 print (pasahitza)
 ```
+
 Emaitza:
 
 ```console
@@ -283,13 +315,17 @@ Sartu zenbaki bat: 6
 ```
 
 6.1 ariketa
+
 Definitu `Menue izeneko klase bat, honako funtzio hauek dituena:
-1. `def init__ (self): aukeren zerrenda bat (* strings*) jasotzen du parametro gisa.
-2. "def mostrar (self)": aurretik zenbaki bat duen aukerak erakusten ditu, a print deituz.
-3. `def selecciono (self, numero) Itzuli `Truee, baldin eta aukeratutako zenbakia menuan badago; bestela, itzuli `False«.
+
+1. `def init__ (self)`: aukeren zerrenda bat (* strings*) jasotzen du parametro gisa.
+2. `def mostrar (self)`: aurretik zenbaki bat duen aukerak erakusten ditu, a print deituz.
+3. `def selecciono (self, numero)` Itzuli `True`, baldin eta aukeratutako zenbakia menuan badago; bestela, itzuli `False`.
+
 Gero klase hori 2.py fitxategian inportatu eta erabili.
 
 Fitxategia:
+
 ```python
 class Menu:
 def __init__ (self, aukerak):
@@ -304,7 +340,8 @@ return numero > 0 and numero < = len (self._opciones)
 
 ```
 
-`2 ETEa fitxategia:
+2 ETEa fitxategia:
+
 ```python
 import menu
 miMenu = menu. Menua (["Erakutsi", "Ezabatu", "Irten"])
@@ -328,13 +365,17 @@ Oraingo 1. aukera
 ## Proposatutako ariketak
 
 6.0 ariketa
+
 Sortu `Ficheroere 'izeneko klase bat, honako funtzio hauekin:
+
 1. `def __init__ (self, fitxategia): ireki beharreko fitxategia jasotzen du parametro gisa.
 2. `def leer (self) ": fitxategiaren edukia jasotzen duen kate bat itzultzen du.
 3. "def escribir (self, contenido)": fitxategian parametro gisa pasatzen zaion edukia idazten du.
+
 Gero, ikasgela erabili behar duzu beste fitxategi batean inportatuz.
 
 Fitxategia:
+
 ```python
 class Fitxategia:
 def __init__ (self, izenaFitxategia):
@@ -353,7 +394,8 @@ fichero.write (edukia)
 fichero.close ()
 ```
 
-Fitxategia: `6.0.ete:
+Fitxategia: 6.0.txt`:
+
 ```python
 from datetime import date
 
@@ -366,10 +408,13 @@ print ("Aurreko edukia:", miFichero.leer ()
 miFichero.escribir ("Edukia aldatuta!!!" + str (date.today ()))
 print ("Edukia:", miFichero.leer ())
 ```
+
 Testu-fitxategia:
+
 ```console
 Horixe da gaur egungo edukia.
 ```
+
 Emaitza:
 
 ```console
@@ -378,14 +423,18 @@ Edukia: Edukia aldatuta!!! 2020-08-23
 ```
 
 6.1 ariketa
+
 Sor ezazu "Zerrenda" izeneko klase bat, honako funtzio hauekin:
+
 1. `def __init__ (self, fitxategia): json fitxategi baten izena hartzen du parametrotzat, eta haren edukia zerrenda batean kargatu behar da. Zerrenda hori atributu gisa definituko da. Edukiak hiztegi-zerrenda bat izan behar du, «id» formatua duena: 1, «izena»: «Juan»}
 2. `def (self, izena) dago: itzuli egin behar duzu `True«/ `Faldea, parametro gisa pasatzen den izena zerrendan badago.
 3. `def aMinuskulak (self): zerrendako izen guztiak letra xeheetara pasatu behar dira.
 4. "def posicion (self, nombre)": izen hori dagoen posizioa itzuli behar duzu.
+
 Gero, ikasgela erabili behar duzu beste fitxategi batean inportatuz.
 
 Zerrenda fitxategia:
+
 ```python
 import json
 
@@ -419,7 +468,8 @@ print (datua)
 
 ```
 
-`6.1 ETEa fitxategia:
+6.1 ETEa fitxategia:
+
 ```python
 zerrenda import
 miLista = lista. Zerrenda ("6.1.json")
@@ -436,7 +486,8 @@ print (miListado.posicion ('eugene'))
 ```
 
 `6.1.json«fitxategia:
-``javascript '
+
+```javascript
 [
 {
 "id": 3,
@@ -452,6 +503,7 @@ print (miListado.posicion ('eugene'))
 }
 ]
 ```
+
 Emaitza:
 
 ```console
@@ -463,15 +515,19 @@ Badago!
 ```
 
 6.2 ariketa
+
 Sor ezazu `Tareas«izeneko klase bat, honako funtzio hauekin:
-1- `def __init__ (self) «Tareas.json» izeneko fitxategia ireki behar duzu, eta honako formatu hau izango duten hiztegiak zerrenda batean kargatu: {id: 1, ataza: «Ikasi zerbait»}. Zerrenda hori atributua izango da.
-2- `def sortu (self, zeregina) ": objektu berri bat sortu eta zerrendan gordetzen du.
-3- `def eliminatu (self, id): ID horrek duen zerrendako ataza bat ezabatzen du.
-4- `def guardar (self) ": gorde zerrenda fitxategi honetan.json.
-5- `def mostrar (self) ": string batean itzultzen ditu ataza guztiak.
+
+1- `def __init__ (self)` «Tareas.json» izeneko fitxategia ireki behar duzu, eta honako formatu hau izango duten hiztegiak zerrenda batean kargatu: {id: 1, ataza: «Ikasi zerbait»}. Zerrenda hori atributua izango da.
+2- `def sortu (self, zeregina)`: objektu berri bat sortu eta zerrendan gordetzen du.
+3- `def eliminatu (self, id)`: ID horrek duen zerrendako ataza bat ezabatzen du.
+4- `def guardar (self)`: gorde zerrenda fitxategi honetan.json.
+5- `def mostrar (self)`: string batean itzultzen ditu ataza guztiak.
+
 Gero, ikasgela erabili behar duzu beste fitxategi batean inportatuz.
 
-Fitxategia: `tareas.py«»
+Fitxategia: `tareas.py`
+
 ```python
 import json
 
@@ -501,8 +557,10 @@ emaitza + = json.dumps (datua) + "\n"
 erreturn emaitza
 
 ```
-Fitxategia: `tareas.json«:
-``javascript '
+
+Fitxategia: `tareas.json`:
+
+``javascript
 [
 "Go ikastea", "id": 3},
 {"Zeregina": "Rust ikertzea", "id": 5},
@@ -510,6 +568,7 @@ Fitxategia: `tareas.json«:
 ] ```
 
 Fitxategia:
+
 ```python
 Atazen inport
 misTareas = atazak. Zereginak ()
@@ -526,6 +585,7 @@ misTareas.crear (66, "Irakurri")
 print (nireTareak.erakutsi (), "\n---")
 misTareas.gorde ()
 ```
+
 Emaitza:
 
 ```console
@@ -554,19 +614,24 @@ Emaitza:
 ```
 
 6.3 ariketa
+
 Sor ezazu `Jugadora 'izeneko klase bat, eta eduki hau izango du:
-1. `def __init__ (self, izena, dortsala): parametroak esleitzen dizkie `_izena_eta `_dorsal, atributuei.
-2. Get/set metodoak `izenerako eta `dortserako '.
-3. "def info (self)":* string* bat itzultzen du jokalariaren informazioarekin.
+
+1. `def __init__ (self, izena, dortsala)`: parametroak esleitzen dizkie `_izena_eta `_dorsal, atributuei.
+2. Get/set metodoak izenerako eta dortserako '.
+3. `def info (self)`:* string* bat itzultzen du jokalariaren informazioarekin.
 
 Sor ezazu `Ekipola 'izeneko klase bat, eta eduki hau izango du:
-1. `def cargar (self) «Jokalari» izeneko fitxategi bat ireki behar duzu. Fitxategi horrek jokalari-hiztegien zerrenda bat izango du [{izena: "Pele", dortsala: 10}, {).
-Eta fitxategiaren objektu bakoitzeko, "JUgadora" motako instantzia bat sortu behar duzu, eta `this._jugadores`izeneko zerrenda batean sartu.
-2. `def erakutsi (self) ": jokalarien zerrenda osoa erakutsi behar duzu.
-3. `def fitxaketa (self, izena, dortsala) ": jokalari berri bat sartu behar duzu zerrendan," JUgadora "ren instantzia bat sortuz.
-Ikasgelan, `Jugadora 'klasea inportatu beharko duzu, erabili ahal izateko.
 
-`￮ jokalari.ete 'fitxategia:
+1. `def cargar (self)` «Jokalari» izeneko fitxategi bat ireki behar duzu. Fitxategi horrek jokalari-hiztegien zerrenda bat izango du [{izena: "Pele", dortsala: 10}, {).
+Eta fitxategiaren objektu bakoitzeko, "JUgadora" motako instantzia bat sortu behar duzu, eta `this._jugadores`izeneko zerrenda batean sartu.
+2. `def erakutsi (self)`: jokalarien zerrenda osoa erakutsi behar duzu.
+3. `def fitxaketa (self, izena, dortsala)`: jokalari berri bat sartu behar duzu zerrendan," JUgadora "ren instantzia bat sortuz.
+
+Ikasgelan, `Jugadora` klasea inportatu beharko duzu, erabili ahal izateko.
+
+`jokalari.txt` 'fitxategia:
+
 ```python
 class Jokalaria:
 def __init__ (self, izena, dortsala):
@@ -593,7 +658,8 @@ def toString (self):
 return f "{self._nombre} {self._dorsal}"
 ```
 
-· ETEen taldea fitxategia:
+TXTen taldea fitxategia:
+
 ```python
 import json
 Jokalariaren prezioa
@@ -616,6 +682,7 @@ print (jokalaria.toString ())
 ```
 
 Jokalarien fitxategia:
+
 ```python
 [
 {
@@ -629,7 +696,8 @@ Jokalarien fitxategia:
 ]
 ```
 
-Fitxategia: `6.3 ETE:
+Fitxategia: `6.3 TXT`:
+
 ```python
 taldeko import
 miEquipo = taldea. Taldea ()
@@ -639,6 +707,7 @@ NireTaldea.erakutsi ()
 Nire taldea.fitxaketa ("Gento", 11)
 NireTaldea.erakutsi ()
 ```
+
 Emaitza:
 
 ```console
